added Angular material, added offers component

--- a/src/WebUI/HotelApp/src/app/shell/header/header.component.html
+++ b/src/WebUI/HotelApp/src/app/shell/header/header.component.html
@@ -13,6 +13,10 @@
     </button>
     <div id="navbar-menu" class="collapse navbar-collapse float-xs-none" [ngbCollapse]="menuHidden">
       <div class="navbar-nav">
+        <a class="nav-item nav-link text-uppercase" routerLink="/offers" routerLinkActive="active">
+          <i class="fas fa-home"></i>
+          <span translate>Offers</span>
+        </a>
         <a class="nav-item nav-link text-uppercase" routerLink="/home" routerLinkActive="active">
           <i class="fas fa-home"></i>
           <span translate>Home</span>
