--- a/src/WebUI/HotelApp/src/app/offers/offers-list/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list/offers-list.component.html
@@ -1,13 +1,13 @@
 <h2>Offers</h2>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let offer">{{ offer.name }}</td>
+      <td mat-cell *matCellDef="let offer">{{ offer.title }}</td>
     </ng-container>
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="offerId">
       <th mat-header-cell *matHeaderCellDef>Id</th>
-      <td mat-cell *matCellDef="let offer">{{ offer.id }}</td>
+      <td mat-cell *matCellDef="let offer">{{ offer.offerId }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
