--- a/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
@@ -32,6 +32,11 @@
       <td mat-cell *matCellDef="let offer">{{ offer.maxGuests }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="delButton">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let offer"><button class="btn btn-primary" (click)="DeleteOffer(offer.offerId,offer.isActive)">Usuń ofertę</button></td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
   </table>
