--- a/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
@@ -1,4 +1,5 @@
 <h2>Offers</h2>
+<a routerLink="add" class="btn btn-sm btn-success mb-2">Add offer</a>
 <section class="example-section">
   <mat-checkbox class="example-margin" [(ngModel)]="showActive" (change)="setShowActive($event.checked)">Aktywne
   </mat-checkbox>
