--- a/src/WebUI/HotelApp/src/app/offers/offers-add/offers-add.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-add/offers-add.component.html
@@ -3,28 +3,44 @@
     <div class="form-row">
         <div class="form-group col-5">
             <label>Title</label>
-            <mat-form-field>
-              <input type="text" formControlName="title" class="form-control"/>
-            </mat-form-field>
+              <input type="text" formControlName="offerTitle" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.offerTitle.errors }"/>
+              <div *ngIf="submitted && f.offerTitle.errors" class="invalid-feedback">
+                <div *ngIf="f.offerTitle.errors.required">Title is required</div>
+              </div>
         </div>
         <div class="form-group col-5">
           <label>Cost per child</label>
-          <input type="text" formControlName="costPerChild" class="form-control"/>
+          <input type="text" formControlName="costPerChild" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.costPerChild.errors }"/>
+          <div *ngIf="submitted && f.costPerChild.errors" class="invalid-feedback">
+            <div *ngIf="f.costPerChild.errors.required">Cost per child is required</div>
+          </div>
         </div>
         <div class="form-group col-5">
           <label>Cost per adult</label>
-          <input type="text" formControlName="costPerAdult" class="form-control"/>
+          <input type="text" formControlName="costPerAdult" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.costPerAdult.errors }"/>
+          <div *ngIf="submitted && f.costPerAdult.errors" class="invalid-feedback">
+            <div *ngIf="f.costPerAdult.errors.required">Cost per adult is required</div>
+          </div>
         </div>
         <div class="form-group col-5">
           <label>Max number of guests</label>
-          <input type="text" formControlName="maxGuests" class="form-control"/>
+          <input type="text" formControlName="maxGuests" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.maxGuests.errors }"/>
+          <div *ngIf="submitted && f.maxGuests.errors" class="invalid-feedback">
+            <div *ngIf="f.maxGuests.errors.required">Max number of guests is required</div>
+          </div>
+        </div>
+        <div class="form-group col-5">
+          <label>Description</label>
+          <input type="text" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.description.errors }"/>
+          <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+            <div *ngIf="f.description.errors.required">Description is required</div>
+          </div>
         </div>
     </div>
     <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        <button class="btn btn-primary">
             Save
         </button>
-        <a routerLink="/users" class="btn btn-link">Cancel</a>
+        <a routerLink="/offers" class="btn btn-link">Cancel</a>
     </div>
 </form>
