--- a/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
@@ -38,6 +38,11 @@
       <td mat-cell *matCellDef="let offer"><button class="btn btn-primary" (click)="DeleteOffer(offer.offerId,offer.isActive)">Usuń ofertę</button></td>
     </ng-container>
 
+    <ng-container matColumnDef="roomsButton">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerId }}/rooms" class="btn btn-sm btn-success mb-2">Show rooms</a></td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
   </table>
