--- a/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list.component.html
@@ -10,7 +10,7 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let offer">{{ offer.title }}</td>
+      <td mat-cell *matCellDef="let offer"><a routerLink="edit/{{offer.offerId}}">{{ offer.title }}</a></td>
     </ng-container>
 
     <ng-container matColumnDef="isActive">
