--- a/src/WebUI/HotelApp/src/app/offers/offers-add-edit/offers-add-edit.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-add-edit/offers-add-edit.component.html
@@ -9,6 +9,10 @@
                 <div *ngIf="f.title.errors.required">Title is required</div>
               </div>
         </div>
+        <div class="form-group col-5" *ngIf="!isAddMode">
+          <label>Active</label>
+          <input type="checkbox" formControlName="isActive" class="form-control" />
+        </div>
         <div class="form-group col-5">
           <label>Cost per child</label>
           <input type="text" formControlName="costPerChild" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.costPerChild.errors }"/>
