--- a/src/WebUI/HotelApp/src/app/rooms/rooms-list.component.html
+++ b/src/WebUI/HotelApp/src/app/rooms/rooms-list.component.html
@@ -1,8 +1,9 @@
 <h2>Rooms</h2>
+<a routerLink="add" class="btn btn-sm btn-success mb-2">Add room</a>
 <section class="example-section">
   <label>Filter only specific room number</label>
   <input type="number" name="theValue" step="1" min="1" max="10000" (change)="updatefilter(roomNumFilter.value)"
-         ng-pattern="integerval" class="w3-input w3-animate-input" style="width:15%" #roomNumFilter>
+    ng-pattern="integerval" class="w3-input w3-animate-input" style="width:15%" #roomNumFilter>
 </section>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
@@ -16,11 +17,12 @@
       <td mat-cell *matCellDef="let room">{{ room.hotelRoomNumber}}</td>
     </ng-container>
 
-    
+
 
     <ng-container matColumnDef="delButton">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let room"><button class="btn btn-primary" >Usuń ofertę</button></td>
+      <td mat-cell *matCellDef="let room"><button class="btn btn-primary" (click)="DeleteRoom(room)">Delete
+          room</button></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
