--- a/src/WebUI/HotelApp/src/app/offers/offers-rooms-list/offers-rooms-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-rooms-list/offers-rooms-list.component.html
@@ -4,7 +4,10 @@
       <th mat-header-cell *matHeaderCellDef>Number of hotel's room</th>
       <td mat-cell *matCellDef="let room">{{ room.hotelRoomNumber }}</td>
     </ng-container>
-
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let room"><button (click)="deleteRoom(room.roomId)">Delete</button></td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
   </table>
