--- a/src/WebUI/HotelApp/src/app/offers/offers-rooms-list/offers-rooms-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-rooms-list/offers-rooms-list.component.html
@@ -1,4 +1,6 @@
 <div class="mat-elevation-z8">
+  <button (click)="openAddDialog()" class="btn btn-secondary" [disabled]="allRooms.length == 0">Add new room</button>
+
   <table mat-table [dataSource]="myDataArray">
     <ng-container matColumnDef="hotelRoomNumber">
       <th mat-header-cell *matHeaderCellDef>Number of hotel's room</th>
@@ -6,7 +8,7 @@
     </ng-container>
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let room"><button (click)="deleteRoom(room.roomId)">Delete</button></td>
+      <td mat-cell *matCellDef="let room"><button (click)="deleteRoom(room.roomId)" class="btn btn-danger">Delete</button></td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
