--- a/src/WebUI/ClientApp/src/app/offers-list/offers-list.component.html
+++ b/src/WebUI/ClientApp/src/app/offers-list/offers-list.component.html
@@ -1,21 +1,9 @@
 <h2>Offers</h2>
-<a routerLink="add" class="btn btn-sm btn-success mb-2">Add offer</a>
-<section class="example-section">
-  <mat-checkbox class="example-margin" [(ngModel)]="showActive" (change)="setShowActive($event.checked)">Aktywne
-  </mat-checkbox>
-  <mat-checkbox class="example-margin" [(ngModel)]="showInactive" (change)="setShowInactive($event.checked)">Nieaktywne
-  </mat-checkbox>
-</section>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let offer"><a routerLink="edit/{{offer.offerId}}">{{ offer.title }}</a></td>
-    </ng-container>
-
-    <ng-container matColumnDef="isActive">
-      <th mat-header-cell *matHeaderCellDef>Active</th>
-      <td mat-cell *matCellDef="let offer">{{ offer.isActive }}</td>
+      <td mat-cell *matCellDef="let offer">{{ offer.title }}</td>
     </ng-container>
 
     <ng-container matColumnDef="costPerChild">
@@ -31,18 +19,6 @@
     <ng-container matColumnDef="maxGuests">
       <th mat-header-cell *matHeaderCellDef>Max guests</th>
       <td mat-cell *matCellDef="let offer">{{ offer.maxGuests }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="delButton">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let offer"><button class="btn btn-primary"
-          (click)="DeleteOffer(offer.offerId,offer.isActive)">Delete offer</button></td>
-    </ng-container>
-
-    <ng-container matColumnDef="roomsButton">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerId }}/rooms"
-          class="btn btn-sm btn-success mb-2">Show rooms</a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
