--- a/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
+++ b/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
@@ -47,6 +47,12 @@
       <td mat-cell *matCellDef="let offer">{{ offer.maxGuests }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="reservationButton">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerId }}/reservations"
+                                              class="btn btn-sm btn-success mb-2">Make reservation</a></td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
   </table>
