--- a/src/WebUI/HotelApp/src/app/app.component.html
+++ b/src/WebUI/HotelApp/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a routerLink="/offers">Offers</a>
   <a routerLink="/rooms">Rooms</a>
+  <a routerLink="/reservations">Reservations</a>
 </nav>
 <router-outlet></router-outlet>
