--- a/src/WebUI/HotelApp/src/app/offers/offers-list/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list/offers-list.component.html
@@ -8,9 +8,9 @@
 </section>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="title">
+    <ng-container matColumnDef="offerTitle">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let offer"><a routerLink="edit/{{offer.offerId}}">{{ offer.title }}</a></td>
+      <td mat-cell *matCellDef="let offer"><a routerLink="edit/{{offer.offerID}}">{{ offer.offerTitle }}</a></td>
     </ng-container>
 
     <ng-container matColumnDef="isActive">
@@ -41,7 +41,7 @@
 
     <ng-container matColumnDef="roomsButton">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerId }}/rooms"
+      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerID }}/rooms"
           class="btn btn-sm btn-success mb-2">Show rooms</a></td>
     </ng-container>
 
