--- a/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
+++ b/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
@@ -23,13 +23,13 @@
     Cost max:
     <input type="number" [(ngModel)]="costMax" (change)="fetchData()" class="w3-input w3-animate-input">
   </label>
-  <button class="btn btn-sm btn-success mb-2" (click)="refresh()" >Clear filters</button>
+  <button class="btn btn-sm btn-success mb-2" (click)="refresh()">Clear filters</button>
 </section>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let offer">{{ offer.title }}</td>
+      <td mat-cell *matCellDef="let offer">{{ offer.offerTitle }}</td>
     </ng-container>
 
     <ng-container matColumnDef="costPerChild">
@@ -49,8 +49,8 @@
 
     <ng-container matColumnDef="reservationButton">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerId }}/reservations"
-                                              class="btn btn-sm btn-success mb-2">Make reservation</a></td>
+      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerID }}/reservations"
+          class="btn btn-sm btn-success mb-2">Make reservation</a></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
