--- a/src/WebUI/HotelApp/src/app/reservations/reservations.component.html
+++ b/src/WebUI/HotelApp/src/app/reservations/reservations.component.html
@@ -13,32 +13,32 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="Id">
       <th mat-header-cell *matHeaderCellDef>Rooom identificator</th>
-      <td mat-cell *matCellDef="let reservation">{{ reservation.ReservationId }}</td>
+      <td mat-cell *matCellDef="let reservation">{{ reservation.reservationId }}</td>
     </ng-container>
 
     <ng-container matColumnDef="From">
       <th mat-header-cell *matHeaderCellDef>Check in date</th>
-      <td mat-cell *matCellDef="let reservation">{{ reservation.FromTime}}</td>
+      <td mat-cell *matCellDef="let reservation">{{ reservation.fromTime}}</td>
     </ng-container>
 
     <ng-container matColumnDef="To">
       <th mat-header-cell *matHeaderCellDef> Check out date </th>
-      <td mat-cell *matCellDef="let reservation">{{ reservation.ToTime}}</td>
+      <td mat-cell *matCellDef="let reservation">{{ reservation.toTime}}</td>
     </ng-container>
 
     <ng-container matColumnDef="AdultNo">
       <th mat-header-cell *matHeaderCellDef> Number of adults </th>
-      <td mat-cell *matCellDef="let reservation">{{ reservation.AdultsCount}}</td>
+      <td mat-cell *matCellDef="let reservation">{{ reservation.adultsCount}}</td>
     </ng-container>
 
     <ng-container matColumnDef="ChildrenNo">
       <th mat-header-cell *matHeaderCellDef> Number of children </th>
-      <td mat-cell *matCellDef="let reservation">{{ reservation.ChildrenCount}}</td>
+      <td mat-cell *matCellDef="let reservation">{{ reservation.childrenCount}}</td>
     </ng-container>
 
     <ng-container matColumnDef="ClientName">
       <th mat-header-cell *matHeaderCellDef> Client name</th>
-      <td mat-cell *matCellDef="let reservation">{{reservation.Surname }}</td>
+      <td mat-cell *matCellDef="let reservation">{{reservation.name }} {{reservation.surname }}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
