--- a/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
+++ b/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
@@ -52,6 +52,11 @@
       <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerID }}/reservations"
           class="btn btn-sm btn-success mb-2">Make reservation</a></td>
     </ng-container>
+    <ng-container matColumnDef="reviewsButton">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let offer"><a routerLink="{{ offer.offerID }}/reviews"
+          class="btn btn-sm btn-success mb-2">Reviews</a></td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
