--- a/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/make-reservation/make-reservation.component.html
+++ b/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/make-reservation/make-reservation.component.html
@@ -34,6 +34,6 @@
     <button class="btn btn-primary">
       Save
     </button>
-    <a routerLink="/hotels" class="btn btn-link">Cancel</a>
+    <a (click)="backToList()" class="btn btn-link">Cancel</a>
   </div>
 </form>
