added simple details view

--- a/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
+++ b/src/WebUI/ClientApp/src/app/hotels/hotels-list/hotel-offers-list/offers-list.component.html
@@ -29,7 +29,7 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let offer">{{ offer.offerTitle }}</td>
+      <td mat-cell *matCellDef="let offer"><a routerLink="{{offer.offerID}}">{{ offer.offerTitle }}</a></td>
     </ng-container>
 
     <ng-container matColumnDef="costPerChild">
