--- a/src/WebUI/ClientApp/src/app/app.component.html
+++ b/src/WebUI/ClientApp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav>
   <a routerLink="/hotels">Hotels</a>
+  <a routerLink="/reservations">Reservations</a>
 </nav>
 <router-outlet></router-outlet>
