--- a/src/WebUI/ClientApp/src/app/reservations/reservations.component.html
+++ b/src/WebUI/ClientApp/src/app/reservations/reservations.component.html
@@ -7,36 +7,30 @@
       <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.hotelInfoPreview.hotelName }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="Rooom number">
-      <th mat-header-cell *matHeaderCellDef>Rooom number</th>
-      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.hotelRoomNumber }}</td>
-    </ng-container>
-
     <ng-container matColumnDef="From">
       <th mat-header-cell *matHeaderCellDef>Check in date</th>
-      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.fromTime}}</td>
+      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.from}}</td>
     </ng-container>
 
     <ng-container matColumnDef="To">
       <th mat-header-cell *matHeaderCellDef> Check out date </th>
-      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.toTime}}</td>
+      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.to}}</td>
     </ng-container>
 
     <ng-container matColumnDef="AdultNo">
       <th mat-header-cell *matHeaderCellDef> Number of adults </th>
-      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.adultsCount}}</td>
+      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.numberOfAdults}}</td>
     </ng-container>
 
     <ng-container matColumnDef="ChildrenNo">
       <th mat-header-cell *matHeaderCellDef> Number of children </th>
-      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.childrenCount}}</td>
+      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.numberOfChildren}}</td>
     </ng-container>
 
     <ng-container matColumnDef="DeleteButton">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let clientReservationResult">
-        <a (click)="deleteReservation(clientReservationResult.reservationInfo.reservationId,
-        clientReservationResult.hotelInfoPreview.hotelId, clientReservationResult.offerInfoPreview.offerID)"
+        <a (click)="deleteReservation(clientReservationResult.reservationInfo.reservationID)"
         class="btn btn-sm btn-success mb-2">Delete</a></td>
     </ng-container>
 
