--- a/src/WebUI/ClientApp/src/app/reservations/reservations.component.html
+++ b/src/WebUI/ClientApp/src/app/reservations/reservations.component.html
@@ -7,6 +7,11 @@
       <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.hotelInfoPreview.hotelName }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="Offer">
+      <th mat-header-cell *matHeaderCellDef>Offer</th>
+      <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.offerInfoPreview.offerTitle }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="From">
       <th mat-header-cell *matHeaderCellDef>Check in date</th>
       <td mat-cell *matCellDef="let clientReservationResult">{{ clientReservationResult.reservationInfo.from}}</td>
