--- a/src/WebUI/HotelApp/src/app/offers/offers-list/offers-list.component.html
+++ b/src/WebUI/HotelApp/src/app/offers/offers-list/offers-list.component.html
@@ -36,7 +36,7 @@
     <ng-container matColumnDef="delButton">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let offer"><button class="btn btn-primary"
-          (click)="DeleteOffer(offer.offerId,offer.isActive)">Delete offer</button></td>
+          (click)="DeleteOffer(offer.offerID,offer.isActive)">Delete offer</button></td>
     </ng-container>
 
     <ng-container matColumnDef="roomsButton">
